# main_api

./: README.md  main_api.py  pyproject.toml
src/main_api/: __init__.py  core.py
src/main_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
